--- a/index.html
+++ b/index.html
@@ -9,7 +9,95 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    <h1>hi panda</h1>
+    <header class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">
+                  <img src="images/logo.png" alt="">
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  <a class="nav-link" href="#">Shoes</a>
+                  <a class="nav-link" href="#">Bagpack</a>
+                  <a class="nav-link " href="#" tabindex="-1" aria-disabled="true">Subscribe</a>
+                </div>
+              </div>
+            </div>
+          </nav> 
+          
+          <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+               <div class="row">
+                   <div class="col-md-7">
+
+                   </div>
+                   <div class="col-md-5">
+                    <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                   </div>
+               </div>
+              </div>
+              <div class="carousel-item">
+                 <div class="row">
+                     <div class="col-md-7">
+
+                     </div>
+                     <div class="col-md-5">
+                        <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                     </div>
+                 </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row">
+                    <div class="col-md-7">
+
+                    </div>
+                    <div class="col-md-5">
+                        <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+    </header>
+    <main>
+        <section>
+            <div class="container overflow-hidden mt-5">
+                <div class="row gx-5">
+                  <div class="col">
+                   <div class="p-3 rounded bg-warning d-flex align-items-center justify-content-around">
+                      <h1 class="text-white">Watch</h1>
+                      <img src="images/categories/watch.png" alt="">
+                   </div>
+                  </div>
+                  <div class="col">
+                    <div class="p-3 rounded bg-success d-flex align-items-center justify-content-around">
+                        <h1 class="text-white" >Bag</h1>
+                        <img src="images/categories/bag.png" alt="">
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="p-3 rounded bg-primary d-flex align-items-center justify-content-around">
+                        <h1 class="text-white">Shoe</h1>
+                        <img src="images/categories/shoes.png" alt="">
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </section>
+    </main>
 
 
 
