--- a/index.html
+++ b/index.html
@@ -32,19 +32,25 @@
           <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-               <div class="row">
+               <div class="row d-flex align-items-center p-5">
                    <div class="col-md-7">
-
-                   </div>
+                      <h1>Mega LCD TV for Sports</h1>
+                      <p>This is the world for people who just want to waste time in front of tv.</p>
+                      <h3>$1200</h3>
+                      <button class="btn btn-primary ">Buy Now</button>
+                    </div>
                    <div class="col-md-5">
                     <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
                    </div>
                </div>
               </div>
               <div class="carousel-item">
-                 <div class="row">
+                 <div class="row d-flex align-items-center p-5">
                      <div class="col-md-7">
-
+                      <h1>Cool Dude Headphone</h1>
+                      <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
+                      <h3>$420</h3>
+                      <button class="btn btn-primary">Buy Now</button>
                      </div>
                      <div class="col-md-5">
                         <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -52,9 +58,12 @@
                  </div>
               </div>
               <div class="carousel-item">
-                <div class="row">
+                <div class="row d-flex align-items-center p-5">
                     <div class="col-md-7">
-
+                        <h1>X-Box for your living room</h1>
+                        <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.</p>
+                        <h3>$600</h3>
+                        <button class="btn btn-primary">Buy Now</button>
                     </div>
                     <div class="col-md-5">
                         <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -72,7 +81,7 @@
             </button>
           </div>
     </header>
-    <main>
+    <main class="container">
         <section>
             <div class="container overflow-hidden mt-5">
                 <div class="row gx-5">
@@ -97,7 +106,100 @@
                 </div>
               </div>
         </section>
+        <section class="mt-5">
+          <h3>Shoes</h3>
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card panda-card h-100 shadow ">
+                <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Supply #50</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="card-footer">
+                  <button class="btn btn-primary">Buy now >></button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card panda-card h-100 shadow">
+                <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="card-footer">
+                  <button class="btn btn-primary">Buy now >></button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card panda-card h-100 shadow">
+                <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+                <div class="card-footer">
+                  <button class="btn btn-primary">Buy now >></button>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="mt-5">
+          <h3>Backpack</h3>
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100 shadow ">
+                <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Red Laltu Bag</h5>
+                  <h5>$120</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="card-footer">
+                  <button class="btn btn-primary">Buy now >></button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100 shadow">
+                <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Blue Niltu Bag</h5>
+                  <h5>$350</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="card-footer">
+                  <button class="btn btn-primary">Buy now >></button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100 shadow">
+                <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Black Kaltu Bag</h5>
+                  <h5>$169</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+                <div class="card-footer">
+                  <button class="btn btn-primary">Buy now >></button>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section style="height: 300px;"class="bg-info d-flex justify-content-center align-items-center mt-5">
+          <div>
+            <h1>LET'S STAY IN TOUCH</h1>
+            <h6>Get updates on sales, specials and more</h6>
+            <input type="text" placeholder="Enter your email" name="" id="">
+            <button class="btn btn-primary">SUBMIT</button></div>
+        </section>
     </main>
+    <footer class="text-center mt-5">
+      <small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small>
+    </footer>
 
 
 
