--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda-commerce</title>
-    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="container">
@@ -29,7 +29,7 @@
             </div>
           </nav> 
           
-          <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+          <div id="carouselExampleControls" class="carousel slide panda-slide mt-5" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
                <div class="row d-flex align-items-center p-5">
@@ -83,7 +83,7 @@
     </header>
     <main class="container">
         <section>
-            <div class="container overflow-hidden mt-5">
+            <div class="container overflow-hidden mt-5 categories">
                 <div class="row gx-5">
                   <div class="col">
                    <div class="p-3 rounded bg-warning d-flex align-items-center justify-content-around">
@@ -113,10 +113,10 @@
               <div class="card panda-card h-100 shadow ">
                 <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Supply #50</h5>
+                  <h5 class="card-title">Supply 350</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
-                <div class="card-footer">
+                <div class="card-footer panda-card-footer">
                   <button class="btn btn-primary">Buy now >></button>
                 </div>
               </div>
@@ -126,9 +126,9 @@
                 <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text">This card panda-cardas supporting text below as a natural lead-in to additional content.</p>
                 </div>
-                <div class="card-footer">
+                <div class="card-footer panda-card-footer">
                   <button class="btn btn-primary">Buy now >></button>
                 </div>
               </div>
@@ -138,9 +138,9 @@
                 <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card panda-cardas even longer content than the first to show that equal height action.</p>
                 </div>
-                <div class="card-footer">
+                <div class="card-footer panda-card-footer">
                   <button class="btn btn-primary">Buy now >></button>
               </div>
             </div>
@@ -150,40 +150,40 @@
           <h3>Backpack</h3>
           <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
-              <div class="card h-100 shadow ">
+              <div class="card panda-card-100 shadow ">
                 <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Red Laltu Bag</h5>
                   <h5>$120</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
-                <div class="card-footer">
+                <div class="card-footer panda-card-footer">
                   <button class="btn btn-primary">Buy now >></button>
                 </div>
               </div>
             </div>
             <div class="col">
-              <div class="card h-100 shadow">
+              <div class="card panda-card-100 shadow">
                 <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Blue Niltu Bag</h5>
                   <h5>$350</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text">This card panda-cardas supporting text below as a natural lead-in to additional content.</p>
                 </div>
-                <div class="card-footer">
+                <div class="card-footer panda-card-footer">
                   <button class="btn btn-primary">Buy now >></button>
                 </div>
               </div>
             </div>
             <div class="col">
-              <div class="card h-100 shadow">
+              <div class="card panda-card-100 shadow">
                 <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Black Kaltu Bag</h5>
                   <h5>$169</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card panda-cardas even longer content than the first to show that equal height action.</p>
                 </div>
-                <div class="card-footer">
+                <div class="card-footer panda-card-footer">
                   <button class="btn btn-primary">Buy now >></button>
               </div>
             </div>
