--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
+            <div class="container-fluid sticky-top">
               <a class="navbar-brand" href="#">
                   <img src="images/logo.png" alt="">
               </a>
@@ -21,9 +21,9 @@
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                   <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  <a class="nav-link" href="#">Shoes</a>
-                  <a class="nav-link" href="#">Bagpack</a>
-                  <a class="nav-link " href="#" tabindex="-1" aria-disabled="true">Subscribe</a>
+                  <a class="nav-link" href="#shoes">Shoes</a>
+                  <a class="nav-link" href="#bagpack">Bagpack</a>
+                  <a class="nav-link " href="#subscribe" tabindex="-1" aria-disabled="true">Subscribe</a>
                 </div>
               </div>
             </div>
@@ -84,7 +84,7 @@
     <main class="container">
         <section>
             <div class="container overflow-hidden mt-5 categories">
-                <div class="row gx-5">
+                <div class="row g-5">
                   <div class="col">
                    <div class="p-3 rounded bg-warning d-flex align-items-center justify-content-around">
                       <h1 class="text-white">Watch</h1>
@@ -106,7 +106,7 @@
                 </div>
               </div>
         </section>
-        <section class="mt-5">
+        <section id="shoes" class="mt-5">
           <h3>Shoes</h3>
           <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
@@ -146,7 +146,7 @@
             </div>
           </div>
         </section>
-        <section class="mt-5">
+        <section id="backpack" class="mt-5">
           <h3>Backpack</h3>
           <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
@@ -189,7 +189,7 @@
             </div>
           </div>
         </section>
-        <section style="height: 300px;"class="bg-info d-flex justify-content-center align-items-center mt-5">
+        <section id="subscribe" style="height: 300px;"class="bg-info d-flex justify-content-center align-items-center mt-5">
           <div>
             <h1>LET'S STAY IN TOUCH</h1>
             <h6>Get updates on sales, specials and more</h6>
